kustomize/clusters/overlays/thomelab/actual-budget-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
