kustomize/clusters/overlays/thomelab/cryptpad-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cryptpad
