kustomize/clusters/overlays/thomelab/dev-env-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-env
