kustomize/clusters/overlays/thomelab/firefly-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firefly
