kustomize/clusters/overlays/thomelab/grist-app-of-apps.yaml
# Grist namespace, AppProject, and Application
---
apiVersion: v1
kind: Namespace
metadata:
  name: grist
  labels:
    velero.io/include-in-backup: "true"
