kustomize/clusters/overlays/thomelab/guacamole-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guacamole
