kustomize/clusters/overlays/thomelab/hedgedoc-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hedgedoc
