kustomize/clusters/overlays/thomelab/immich-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
