kustomize/clusters/overlays/thomelab/immich-migration-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich-test
