kustomize/clusters/overlays/thomelab/kasm-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kasm
