kustomize/clusters/overlays/thomelab/n8n-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
