kustomize/clusters/overlays/thomelab/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
