kustomize/clusters/overlays/thomelab/nextcloud-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
