kustomize/clusters/overlays/thomelab/paperless-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
