kustomize/clusters/overlays/thomelab/protonmailbridge-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: protonmail-bridge
