kustomize/clusters/overlays/thomelab/renovate-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renovate
