kustomize/clusters/overlays/thomelab/thomflix-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thomflix
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
