kustomize/clusters/overlays/thomelab/trilium-app-of-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trilium
